--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>MrChuks Project</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="MrChuks Project" />
+    <meta name="author" content="MrChuks" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="MrChuks Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="MrChuks Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
